# datatransform-mcp

./: README.md  pyproject.toml
datatransform_mcp/: __init__.py  server.py
