[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datatransform-mcp"
version = "1.1.0"
description = "MCP server for DataTransform API — data conversion, filtering, aggregation, and NL queries for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "data", "csv", "json", "transform", "etl", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
datatransform-mcp = "datatransform_mcp.server:main"

[project.urls]
Homepage = "https://rebaselabs.online"
Repository = "https://github.com/rebaselabs-framework/datatransform-mcp"
Documentation = "https://data-transform-api-v2.rebaselabs.online"

[tool.hatch.build.targets.wheel]
packages = ["datatransform_mcp"]
